# docs/swagger.json
@@ -204,7 +204,7 @@
                             "additionalProperties": {
                                 "type": "array",
                                 "items": {
-                                    "type": "string"
+                                    "$ref": "#/definitions/github_com_Edu0liver_prototype-healthy-api_internal_modules_knowledge_dto.KBResponse"
                                 }
                             }
                         }
@@ -2041,14 +2041,10 @@
         "github_com_Edu0liver_prototype-healthy-api_internal_modules_iam_dto.LoginRequest": {
             "type": "object",
             "required": [
-                "company_slug",
                 "email",
                 "password"
             ],
             "properties": {
-                "company_slug": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -2071,12 +2067,12 @@
         "github_com_Edu0liver_prototype-healthy-api_internal_modules_iam_dto.RegisterAdminRequest": {
             "type": "object",
             "required": [
-                "company_slug",
+                "company_id",
                 "email",
                 "password"
             ],
             "properties": {
-                "company_slug": {
+                "company_id": {
                     "type": "string"
                 },
                 "email": {
